   * wesnoth.select_hex is now deprecated in favour of the new
     wesnoth.select_unit (or u:select_unit). The effect is almost the same
     (with the exception that it does not outline the hex if true is
     passed as the second argument), but this name change was done to
     emphasize that it acts on a unit, more than a location.
   * WML tables defined in Lua now accept string keys with array values
     (where "array" is a table whose keys are all integers). This joins
     the elements of the array with commas and produces a single string
     value. eg {x = {1,2,3}} is equivalent to {x = "1,2,3"}.
   * wesnoth.effects table can now be used to alter the behaviour of
     built-in effects - for example, to add a new feature to
     [effect]apply_to=attack. It also now supports effect descriptions,
     for use by the [trait] tag.
   * Additional fields in unit proxy:
     * usage, cost - self-explanatory
     * traits - list of the IDs of all traits
     * abilities - list of the IDs of all abilities
   * Additional fields in table returned by wesnoth.get_terrain_info:
     * icon, editor_image, light
   * Additional fields in unit type proxu:
     * race, id, alignment
     * attacks, which returns the same thing as unit.attacks
     * abilities, same as unit.abilities
   * LuaAI:
     * The table returned by check_*() now has a "result" field which
       gives a description of the action's result; similar to "status"
       but more descriptive.
     * Target tables now use a descriptive name for "type", instead of
       an integer. This applies to the elements of the table returned by
       ai.get_targets() and also to the elements of tables returned by
       Lua goals. (However, Lua goals that used integers will continue
       to work for now.)
     * There are some compatibility-breaking changes to Lua candidate
       actions - see the release notes or the wiki for full details.